--- a/portfolio.html
+++ b/portfolio.html
@@ -760,7 +760,7 @@
       
       <div class="profile-image">
         <!-- Using a placeholder image from Picsum -->
-        <img src="me.png" alt="Pascal Ouma - Django & React Developer">
+        <img src="me.jpg" alt="Pascal Ouma - Django & React Developer">
       </div>
     </section>
 
