--- a/index.html
+++ b/index.html
@@ -620,12 +620,14 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Hi 👋 — I build & fix <span style="color: var(--primary);">Django + React</span> apps.</h1>
-                <p class="lead">Fast, affordable, and Nairobi-based. I help clinics, shops, and small businesses go online or solve urgent bugs.</p>
-                
-                <p class="lead" style="font-style: italic; font-weight: 500; color: var(--primary-dark); border-left: 3px solid var(--primary); padding-left: 15px;">
-                    My specialty is taking **mediocre systems and making them brilliant**. If your existing application is slow, clunky, or simply visually unappealing, I transform it into an intuitive, polished, and professional product that users will love.
-                </p>
+               <h1>Hi 👋 — I build & fix <span style="color: var(--primary);">Django + React</span> apps.</h1>
+<p class="lead">
+    Fast, affordable, and Nairobi-based. I help clinics, shops, and small businesses go online, solve urgent bugs, **and develop digital HR solutions for corporate clients**.
+</p>
+
+<p class="lead" style="font-style: italic; font-weight: 500; color: var(--primary-dark); border-left: 3px solid var(--primary); padding-left: 15px;">
+    My specialty is taking **mediocre systems and making them brilliant**. This includes transforming slow, clunky corporate HR processes into intuitive, polished, and professional platforms that handle **bulk registration, contract signing, payroll, leave, and attendance**—all virtual with secure PDF downloads.
+</p>
                 
                 <div class="cta">
                     <a href="https://wa.me/254712154175" class="btn">Message me on WhatsApp</a>
